fixed spacing completely, done.

--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -123,7 +123,7 @@ hr {
 }
 
 .full-list {
-    width: 500px;
+    width: 400px;
 }
 
 .left-side, .right-side {
@@ -151,14 +151,17 @@ table {
 
 th {
     background-color: #F8F8F9;
-    width: 200px;
     text-align: left;
     padding: 10px 10px 10px 10px;
 }
-
+#name-cell, #name-head {
+    width: 225px;
+}
+#party-head, #party-cell {
+    width: 75px;
+}
 td {
     padding: 20px 5px 20px 10px;
-    width: 250px;
 }
 
 tr {
@@ -174,7 +177,7 @@ tr:hover {
     background-color: #F4F4F5;
     padding: 10px;
     font-size: 18px;
-    width: 200px;
+    width: 350px;
 }
 
 a {
